z-index bug fixed

--- a/src/main/webapp/static/css/header.css
+++ b/src/main/webapp/static/css/header.css
@@ -12,10 +12,10 @@ nav{
 	background-position: left;
 	background-color: rgba(92,168,214,0.9);
 	position: fixed;
-	z-index: 2;
 	width: 100vw;
 	box-shadow: 2px 2px 10px rgba(0,0,0,0.8);
 	border-radius: 3px;
+	z-index: 1;
 }
 
 .logoHeader {
